@@ -44,6 +44,10 @@ Major changes
   still relying on it. The `cssutils` project is also dead upstream, with its
   repository being gone after Bitbucket
   https://bitbucket.org/blog/sunsetting-mercurial-support-in-bitbucket[removed Mercurial support].
+- The (formerly required) `pygments` dependency is now optional. It is only
+  used when using `:view-source` with QtWebKit, or when forcing it via
+  `:view-source --pygments` on QtWebEngine. If it is unavailable, an
+  unhighlighted fallback version of the page's source is shown.
 - TODO: The former dependency on the `pkg_resources` module (part of the
   `setuptools` project) got dropped.
 - A new dependency on the `importlib_resources` module got introduced for
